docs/traefik/other/traefik-ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-traefik-dashboard-https
  namespace: ns-traefik-master
  annotations:
    kubernetes.io/ingress.class: "traefik-master-lb"
    traefik.ingress.kubernetes.io/router.entrypoints: "traefik-websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: ns-traefik-master-vpn-only@kubernetescrd
spec:
  ingressClassName: traefik-master-lb
  tls:
    - hosts:
        - traefik-dashboard-k8s.my-domain.com
      secretName: cert-traefik-dashboard
  rules:
    - host: traefik-dashboard-k8s.my-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-traefik-master-dashboard
                port:
                  number: 8080
